# home-planer

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  ruff.toml
backend/src/: main.py
backend/src/application/: dtos.py
backend/src/application/ports/: __init__.py  clock.py  instance_repo.py  template_repo.py  transfer_repo.py  user_repo.py
backend/src/application/use_cases/: __init__.py  calendar.py  dashboard.py  instances.py  templates.py  users.py
backend/src/domain/: entities.py  exceptions.py  services.py  value_objects.py
backend/src/infrastructure/: settings.py
backend/src/infrastructure/db/: connection.py  migrations.py  schema.py  seed.py
backend/src/infrastructure/repos/: clock_adapter.py  instance_repo_sqlite.py  template_repo_sqlite.py  transfer_repo_sqlite.py  user_repo_sqlite.py
backend/src/presentation/: deps.py  schemas.py  static.py
backend/src/presentation/api/: calendar.py  dashboard.py  instances.py  templates.py  users.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py  test_api.py  test_smoke.py
backend/tests/unit/: __init__.py  test_balance.py  test_clock.py  test_domain_entities.py  test_domain_services.py  test_instance_repo_sqlite.py  test_migrations.py  test_recurrence_dates.py  test_template_repo_sqlite.py  test_transfer_repo_sqlite.py  test_use_cases_instances.py  test_use_cases_templates.py  test_use_cases_users.py  test_user_repo_sqlite.py
data/: planner.db-shm  planner.db-wal
(+21 files in other folders)
